--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
  <body>
  <div class="container">
     <div class="button_wrapper">
-	  <a href="#" class="button">НАЧАТЬ</a>
+	  <a href="https://youtube.com" class="button">НАЧАТЬ</a>
     </div>
   </div>
  </body>
